--- a/PetConnect.MVC/Views/Home/Index.cshtml
+++ b/PetConnect.MVC/Views/Home/Index.cshtml
@@ -1,8 +1,23 @@
-﻿@{
+﻿@model List<Pet>
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+<h1>Hello</h1>
+
+@* @if (Model != null && Model.Any())
+{
+    foreach (var pet in Model)
+    {
+        <div class="card" style="width: 18rem;">
+            <img src="@pet.ImageUrl" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">@pet.Name</h5>
+                <p class="card-text">@pet.Description</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    }
+
+} *@
