--- a/PetConnect.MVC/wwwroot/css/site.css
+++ b/PetConnect.MVC/wwwroot/css/site.css
@@ -8,6 +8,7 @@ html {
   }
 }
 
+
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
@@ -18,5 +19,7 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin: 0 0 60px 0 !important;
+    padding:0 !important;
+
 }
